tests/snapshots/generate_plan_tests__node_nx_20.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "CI": "true",
    "NIXPACKS_METADATA": "node",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "npx nx run next-js:build:production"
      ],
      "cacheDirectories": [
        ".next/cache",
        "apps/next-js/.next/cache",
        "node_modules/.cache"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "npm ci"
      ],
      "cacheDirectories": [
        "/root/.npm"
      ],
      "paths": [
        "/app/node_modules/.bin"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "nodejs_18",
        "npm-9_x"
      ],
      "nixLibs": [
        "gcc-unwrapped"
      ],
      "nixOverlays": [
        "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
      ],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "npx nx run next-js:start:production"
  }
}
