tests/snapshots/generate_plan_tests__node_pnpm_corepack.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "CI": "true",
    "NIXPACKS_METADATA": "node",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "pnpm run build"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "npm install -g corepack@0.24.1 && corepack enable",
        "pnpm i --frozen-lockfile"
      ],
      "cacheDirectories": [
        "/root/.local/share/pnpm/store/v3"
      ],
      "paths": [
        "/app/node_modules/.bin"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "nodejs_24",
        "pnpm-9_x"
      ],
      "nixOverlays": [
        "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
      ],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "pnpm run start"
  }
}
